[package]
name = "firmware"
version = "0.1.0"
authors = ["azenk"]

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.5"

[dependencies.stm32l4]
version = "0.9.0"
features = ["stm32l4x6", "rt"]



[profile.dev]
debug = true
incremental = false

[profile.release]
debug = false
lto = true
incremental = false
