[package]
name = "TEST"
version = "0.1.0"
authors = ["AzenkChina <azenk1991@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[profile.dev]
debug = true
incremental = false

[profile.release]
debug = false
lto = true
incremental = false